# flat_spatial

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: storage_bench.rs
examples/: basic_example.rs  collision_detector.rs  shapegrid.rs  storage_bench.rs
src/: aabbgrid.rs  cell.rs  densegrid.rs  grid.rs  lib.rs  shape.rs  shapegrid.rs  sparsegrid.rs  storage.rs
src/shape/: aabb.rs  circle.rs  mod.rs  segment.rs
src/storage/: tests.rs
