[package]
name = "flat_spatial"
version = "0.2.0"
authors = ["Douady Pâris <paris.douady@hotmail.fr>"]
edition = "2018"
keywords = ["algorithms", "spatial", "geometry", "grid", "data-structures"]
description = "Flat spatial partitionning algorithms and data structures"
license = "MIT"
readme = "README.md"
categories = ["algorithms", "graphics", "data-structures", "game-engines"]
exclude = ["img/*"]
repository = "https://github.com/Uriopass/flat_spatial"

[dependencies]
slotmap = {version = "0.4", default-features = false}
mint = "0.5.5"
retain_mut = "0.1.1"

[[example]]
name = "collision_detector"

[dev-dependencies]
criterion = "0.3"
rstar = "0.8.0"
rand = "0.7.3"

[[bench]]
name = "storage_bench"
harness = false