[package]
name = "flat_spatial"
version = "0.3.6"
authors = ["Douady Pâris <paris.douady@hotmail.fr>"]
edition = "2018"
keywords = ["algorithms", "spatial", "geometry", "grid", "data-structures"]
description = "Flat spatial partitionning algorithms and data structures"
license = "MIT"
readme = "README.md"
categories = ["algorithms", "graphics", "data-structures", "game-engines"]
exclude = ["img/*"]
repository = "https://github.com/Uriopass/flat_spatial"

[dependencies]
slotmap = {version = "0.4", default-features = false}
mint = { version = "0.5.6", features = ["serde"] }
serde_crate = {package="serde", version = "1.0", features = ["derive"], optional = true}

[features]
serde = ["serde_crate", "slotmap/serde", "mint/serde"]

[[example]]
name = "collision_detector"

[dev-dependencies]
criterion = "0.3"
rstar = "0.8.0"
rand = "0.7.3"
fastrand = "1.3.3"

[[bench]]
name = "storage_bench"
harness = false