[package]
name = "flat_spatial"
version = "0.4.1"
authors = ["Douady Pâris <paris.douady@hotmail.fr>"]
edition = "2018"
keywords = ["algorithms", "spatial", "geometry", "grid", "data-structures"]
description = "Flat spatial partitionning algorithms and data structures"
license = "MIT"
readme = "README.md"
categories = ["algorithms", "graphics", "data-structures", "game-engines"]
exclude = ["img/*"]
repository = "https://github.com/Uriopass/flat_spatial"

[dependencies]
slotmap = { version = "1.0.2", default-features = false }
serde   = { version = "1.0", features = ["derive"], optional = true }
fnv           = "1.0.3"
euclid = { version = "0.22.7", optional = true }
parry2d = { version = "0.9.0", optional = true }

[[example]]
name = "collision_detector"

[dev-dependencies]
rstar = "0.9"
rand = "0.7.3"
fastrand = "1.3.3"
kdbush = "0.2.0"
criterion = "0.3"
euclid = "0.22.7"

[[example]]
name = "storage_bench"

[profile.bench]
debug = true

[profile.release-with-debug]
inherits = "release"
debug = true

[features]
default = []
serde = ["dep:serde", "slotmap/serde"]
